@@ -1,9 +1,13 @@
 package com.juanba.the_sales_galleon.product.service;
 
+import com.juanba.the_sales_galleon.category.entity.Category;
+import com.juanba.the_sales_galleon.category.repository.CategoryRepository;
 import com.juanba.the_sales_galleon.product.dto.ProductDto;
 import com.juanba.the_sales_galleon.response.ResponseDto;
 import com.juanba.the_sales_galleon.product.entity.Product;
 import com.juanba.the_sales_galleon.product.repository.ProductRepository;
+import com.juanba.the_sales_galleon.user.entity.User;
+import com.juanba.the_sales_galleon.user.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -12,6 +16,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -20,10 +25,19 @@ public class ProductServiceImpl implements ProductService {
     @Autowired
     private ProductRepository productRepository;
 
+    @Autowired
+    private CategoryRepository categoryRepository;
+
+    @Autowired
+    private UserRepository userRepository;
+
     public ResponseEntity<?> getAll() {
         try {
             List<Product> products = productRepository.findAll();
-            return new ResponseEntity<>(new ResponseDto(true, "Products successfully recovered.", products), HttpStatus.OK);
+            List<ProductDto> productDtos = products.stream()
+                    .map(this::convertToDto)
+                    .collect(Collectors.toList());
+            return new ResponseEntity<>(new ResponseDto(true, "Products successfully recovered.", productDtos), HttpStatus.OK);
         } catch (Exception e) {
             return new ResponseEntity<>(new ResponseDto(false, "No products found 😥", null), HttpStatus.NOT_FOUND);
         }
@@ -31,11 +45,14 @@ public class ProductServiceImpl implements ProductService {
 
     public ResponseEntity<?> findById(Long id) {
         try {
-            Optional<Product> product = productRepository.findById(id);
-            if (product.isEmpty())
+            Optional<Product> productOptional = productRepository.findById(id);
+
+            if (productOptional.isEmpty())
                 return new ResponseEntity<>(new ResponseDto(false, "No product found 😥", null), HttpStatus.NOT_FOUND);
 
-            return new ResponseEntity<>(new ResponseDto(true, "Product successfully recovered.", product), HttpStatus.OK);
+            ProductDto productDto = convertToDto(productOptional.get());
+
+            return new ResponseEntity<>(new ResponseDto(true, "Product successfully recovered.", productDto), HttpStatus.OK);
         } catch (Exception e) {
             return new ResponseEntity<>(new ResponseDto(false, "Internal server error 😖", null), HttpStatus.INTERNAL_SERVER_ERROR);
         }
@@ -46,12 +63,15 @@ public class ProductServiceImpl implements ProductService {
         try {
             List<Product> products = productRepository.findAll().stream()
                     .filter(Product::getIsActive)
-                    .toList();
+                    .collect(Collectors.toList());
+            List<ProductDto> productDtos = products.stream()
+                    .map(this::convertToDto)
+                    .collect(Collectors.toList());
 
-            if (products.isEmpty())
-                return new ResponseEntity<>(new ResponseDto(false, "No products found 😥", null), HttpStatus.NOT_FOUND);
+            if (productDtos.isEmpty())
+                return new ResponseEntity<>(new ResponseDto(false, "No active products found 😥", null), HttpStatus.NOT_FOUND);
 
-            return new ResponseEntity<>(new ResponseDto(false, "Active products 🛒", products), HttpStatus.OK);
+            return new ResponseEntity<>(new ResponseDto(true, "Active products 🛒", productDtos), HttpStatus.OK);
         } catch (Exception e) {
             return new ResponseEntity<>(new ResponseDto(false, "Internal server error 😖", null), HttpStatus.INTERNAL_SERVER_ERROR);
         }
@@ -59,10 +79,20 @@ public class ProductServiceImpl implements ProductService {
 
     public ResponseEntity<?> create(ProductDto productDto) {
         try {
+            Optional<Category> categoryOptional = categoryRepository.findById(productDto.getCategory());
+            if (categoryOptional.isEmpty()) {
+                return new ResponseEntity<>(new ResponseDto(false, "Non-existent product category ❌", null), HttpStatus.NOT_FOUND);
+            }
+
+            Optional<User> vendorOptional = userRepository.findById(productDto.getVendor());
+            if (vendorOptional.isEmpty()) {
+                return new ResponseEntity<>(new ResponseDto(false, "User not found ❌", null), HttpStatus.NOT_FOUND);
+            }
+
             Product product = Product.builder()
                     .name(productDto.getName())
                     .description(productDto.getDescription())
-                    .category(productDto.getCategory())
+                    .category(categoryOptional.get())
                     .price(productDto.getPrice())
                     .stock(productDto.getStock())
                     .image(productDto.getImage())
@@ -70,11 +100,12 @@ public class ProductServiceImpl implements ProductService {
                     .color(productDto.getColor())
                     .isNew(productDto.getIsNew())
                     .isActive(productDto.getIsActive())
+                    .vendor(vendorOptional.get())
                     .build();
 
             Product productSaved = productRepository.save(product);
 
-            return new ResponseEntity<>(new ResponseDto(true, "Product successfully created.", productSaved), HttpStatus.CREATED);
+            return new ResponseEntity<>(new ResponseDto(true, "Product successfully created.", convertToDto(productSaved)), HttpStatus.CREATED);
         } catch (Exception e) {
             return new ResponseEntity<>(new ResponseDto(false, "The product could not be created ❌", null), HttpStatus.BAD_REQUEST);
         }
@@ -95,15 +126,24 @@ public class ProductServiceImpl implements ProductService {
 
     public ResponseEntity<?> update(ProductDto productDto) {
         try {
-            Long id = productDto.getId();
-            if (!productRepository.existsById(id))
+            if (!productRepository.existsById(productDto.getId()))
                 return new ResponseEntity<>(new ResponseDto(false, "Product not found 😥", null), HttpStatus.NOT_FOUND);
 
+            Optional<Category> categoryOptional = categoryRepository.findById(productDto.getCategory());
+            if (categoryOptional.isEmpty()) {
+                return new ResponseEntity<>(new ResponseDto(false, "Non-existent product category ❌", null), HttpStatus.NOT_FOUND);
+            }
+
+            Optional<User> vendorOptional = userRepository.findById(productDto.getVendor());
+            if (vendorOptional.isEmpty()) {
+                return new ResponseEntity<>(new ResponseDto(false, "User not found ❌", null), HttpStatus.NOT_FOUND);
+            }
+
             Product product = Product.builder()
-                    .id(id)
+                    .id(productDto.getId())
                     .name(productDto.getName())
                     .description(productDto.getDescription())
-                    .category(productDto.getCategory())
+                    .category(categoryOptional.get())
                     .price(productDto.getPrice())
                     .stock(productDto.getStock())
                     .image(productDto.getImage())
@@ -111,13 +151,37 @@ public class ProductServiceImpl implements ProductService {
                     .color(productDto.getColor())
                     .isNew(productDto.getIsNew())
                     .isActive(productDto.getIsActive())
+                    .vendor(vendorOptional.get())
                     .build();
 
             Product productUpdate = productRepository.save(product);
 
-            return new ResponseEntity<>(new ResponseDto(true, "Product updated successfully.", productUpdate), HttpStatus.OK);
+            return new ResponseEntity<>(new ResponseDto(true, "Product updated successfully.", convertToDto(productUpdate)), HttpStatus.OK);
         } catch (Exception e) {
             return new ResponseEntity<>(new ResponseDto(false, "The product could not be deleted ❌", null), HttpStatus.INTERNAL_SERVER_ERROR);
         }
+    }
+
+    private ProductDto convertToDto(Product product) {
+        ProductDto.ProductDtoBuilder builder = ProductDto.builder()
+                .id(product.getId())
+                .name(product.getName())
+                .description(product.getDescription())
+                .price(product.getPrice())
+                .stock(product.getStock())
+                .image(product.getImage())
+                .brand(product.getBrand())
+                .color(product.getColor())
+                .isNew(product.getIsNew())
+                .isActive(product.getIsActive());
+
+        if (product.getCategory() != null) {
+            builder.category(product.getCategory().getId());
+        }
+        if (product.getVendor() != null) {
+            builder.vendor(product.getVendor().getId());
+        }
+
+        return builder.build();
     }
 }
